2008-05-29  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #535459

	* itip-formatter.c: (extract_itip_data):
	Do not use component when sanity check fails.

2008-05-22  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #534360

	* itip-view.c:
	Migrate from deprecated GtkObject symbols to GObject equivalents.

2008-04-30  Chenthill Palanisamy  <pchenthill@novell.com>

        ** Fixes #338330 (bnc)
           Internet Based Calendar Events Are Declined By Evolution/GroupWise

	* itip-formatter.c: (view_response_cb):

2008-04-28  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for BNC bug #382687

	* plugins/itip-formatter/itip-formatter.c: Don't download contents in
	main thread, which causes deadlock

2008-03-27  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #523541

	* itip-formatter.c: (find_server):
	Do not leak memory returned by e_cal_component_get_recurid_as_string.

2008-02-25  Chenthill Palanisamy  <pchenthill@novell.com>

	* itip-formatter.c: (find_server), (update_attendee_status): Free
	the memory returned by e_cal_component_get_recurid_as_string.								     

2008-02-25  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes#516408
	* itip-formatter.c (find_attendee), (find_to_address),
	(find_from_address), (update_item): Free the memory returned 
	by libical.

2008-02-20  Paul Bolle  <pebolle@tiscali.nl>

	** Follow up on bug #517072

	* itip-view.c: (set_calendar_sender_text), (set_tasklist_sender_text),
	(set_journal_sender_text): Properly escape text here too.

2008-02-19  Paul Bolle  <pebolle@tiscali.nl>

	** Fix for bug #517072

	* itip-view.c: (set_summary_text):
	Properly escape summary text.

2008-02-18  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #515744

	* itip-formatter.c: (idle_open_cb): Memory Leak fix.

2008-02-05  Srinivasa Ragavan  <sragavan@novell.com>

	** Rewrite of itip-formatter bits. It was written around carrying
	EMFormatHTMLPobject. But that would be freed just after the formatter