@@ -1,3 +1,9 @@
+2008-08-14  Suman Manjunath  <msuman@novell.com>
+
+	* itip-formatter.c (update_x), (update_attendee_status): Copy 
+	required X-* properties . This might be needed for special cases
+	in certain backends. 
+
 2008-05-29  Milan Crha  <mcrha@redhat.com>
 
 	** Fix for bug #535459
